# CommuniPAL

./: .gitignore  LICENSE  pyproject.toml  run_tests.py
examples/: example.py
sample_data/able_bodied/shank/: 04_shank-AP891502 204atmb 12Jul22 10-30am for 7d-GHLA-PB08110369-SteppingBouts.csv  05_shank-AP891042 204atmb 12Jul22 11-00am for 7d-GHLA-PB08110369-SteppingBouts.csv  06_shank-AP891047 204atmb 13Jul22 10-30am for 7d-GHLA-PB08110369-SteppingBouts.csv  07_shank-AP891553 204atmb 22Jul22 11-00am for 7d-GHLA-PB08110369-SteppingBouts.csv  08_shank-AP891042 204atmb 22Jul22 5-00pm for 7d-GHLA-PB08110369-SteppingBouts.csv  09_shank-AP891048 204atmb 25Jul22 12-30pm for 5d 11h 43m-GHLA-PB08110369-SteppingBouts.csv  10_shank-AP891502 204atmb 4Aug22 2-00pm for 7d-GHLA-PB08110369-SteppingBouts.csv  11_shank-AP891553 204atmb 15Aug22 2-45pm for 7d-GHLA-PB08110369-SteppingBouts.csv  12_shank-AP891042 204atmb 15Aug22 4-45pm for 7d-GHLA-PB08110369-SteppingBouts.csv  13_shank-AP891001 204atmb 9Aug22 12-00am for 8d 9h 23m-GHLA-PB08110369-SteppingBouts.csv  14_shank-AP891553 204atmb 28Jun23 5-00pm for 7d-GHLA-PB08110369-SteppingBouts.csv  15_shank-AP891553 204atmb 23Jul23 2-00pm for 7d-GHLA-PB08110369-SteppingBouts.csv  16_shank-AP891042 204atmb 23Jul23 2-00pm for 7d-GHLA-PB08110369-SteppingBouts.csv  17_shank-AP891508 204atmb 15Aug23 6-00pm for 7d-GHLA-PA08111183-SteppingBouts.csv  (+10 more)
src/communipal/: __init__.py  classification_model.py  data_processing.py  identifiers.py  timelines.py
tests/: test_identifiers.py
(+49 files in other folders)
